--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "eslint-plugin-prettier": "^5.1.3",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-svg": "^15.0.0",
     "react-native-web": "~0.19.6",
     "tailwind-rn": "^3.0.1"
   },
