--- a/task-management/packages/web/package.json
+++ b/task-management/packages/web/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mitt": "^3.0.1",
+    "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8"
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
